# glances-rs

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: progress.md
docs/: api.md  footprint-audit-v0.2.0.md  footprint-audit-v0.3.0.md  glances-rs.example.toml
docs/superpowers/plans/: 2026-06-14-alerting.md
docs/superpowers/specs/: 2026-06-14-alerting-design.md
examples/: spike.rs
scripts/: footprint.sh
src/: alerts.rs  collector.rs  config.rs  lib.rs  main.rs  server.rs  state.rs
src/api/: mod.rs  security.rs
src/plugins/: cpu.rs  diskio.rs  filter.rs  fs.rs  linux.rs  load.rs  mem.rs  memswap.rs  mod.rs  network.rs  system.rs  uptime.rs
tests/: alerts.rs  engine.rs  probes.rs  security.rs
