[package]
name = "glances-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
description = "Lightweight monitoring server with a Glances-compatible REST API and a minimal CPU/RAM footprint"
license = "MIT"
repository = "https://github.com/nicolargo/glances-rs"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
base64 = "0.22.1"
constant_time_eq = "0.4.2"
regex-lite = "0.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.38.4"
tokio = { version = "1.52.3", features = ["rt", "macros", "sync", "time", "signal"] }
toml = "1.1.2"
tower-http = { version = "0.6.11", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Linux-only: sysconf(_SC_PAGESIZE) for the memswap sin/sout page→byte
# conversion (page size is not 4 KiB on every arch, e.g. aarch64). libc is
# already in the tree (sysinfo depends on it), so this adds no binary weight.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"

# Footprint-first release profile (ARCHITECTURE.md §9). `panic = "abort"` is a
# deliberate choice revisited in Phase 7 of DEVELOPMENT_PLAN.md.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
